vpc.tf
resource "aws_vpc" "dashboard-vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    name        = "${var.prefix_1}-vpc-${var.aws_region}"
    environment = "${var.environment}"
  }

}
